<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <View
        android:id="@+id/view3"
        android:layout_width="463dp"
        android:layout_height="77dp"
        android:background="#38D1E4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/returnButton"
        android:layout_width="52dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="6dp"
        android:contentDescription="@string/bottom_sheet_behavior"
        android:onClick="returnToMainActivity"
        app:layout_constraintBottom_toBottomOf="@+id/view3"
        app:layout_constraintEnd_toStartOf="@+id/packet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view3"
        app:srcCompat="?attr/homeAsUpIndicator" />


    <TextView
        android:id="@+id/packet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="11dp"
        android:text="@string/settings"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/returnButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/returnButton" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/macresolution"
        android:layout_width="263dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="116dp"
        android:text="@string/macvendorresolution"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginBottom="52dp"
        android:onClick="saveSettings"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/serverUrl"
        android:layout_width="373dp"
        android:layout_height="48dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="21dp"
        android:autofillHints="@string/serverUrlHint"
        android:ems="10"
        android:inputType="text|textUri"
        android:labelFor="@+id/serverUrl"
        android:text="@string/serverUrlHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>